//使用proto3语法
syntax = "proto3";

//指定proto文件生成java文件后的类名
option java_outer_classname = "UlifeResp";
option java_package = "com.androidx.ulife.model";

//指定proto文件包名

/*********金刚位 begin***********/
message PinnedItem{
  string clickAction = 1;
  string iconUrl = 2;
  string name = 3;
  string floating = 4;
  string floatingPeriod = 5;
}

message PinnedPart{
  int32 version = 1;
  bool ignoreMcc = 2;
  repeated PinnedItem dataSet = 3;
  string ext = 4;
}
/*********金刚位 end*************/

/*********文本广告位 begin***********/
message AdTxtItem{
  bool notiRed = 1;
  string title = 2;
  string clickAction = 3;
  string textColor = 4;
}

message AdTxtPart{
  int32 version = 1;
  bool ignoreMcc = 2;
  repeated AdTxtItem dataSet = 3;
  string ext = 4;
}
/*********文本广告位 end***********/

/*********图文广告位 begin***********/
message AdPicItem{
  string picUrl = 1;
  string clickAction = 2;
}

message AdPicPart{
  int32 version = 1;
  bool ignoreMcc = 2;
  repeated AdPicItem dataSet = 3;
  string ext = 4;
}
/*********图文广告位 end***********/

/*********悬浮告广告 begin***********/
message AdFloatingItem{
  string picUrl = 1;
  string clickAction = 2;
}

message AdFloatingPart{
  int32 version = 1;
  bool ignoreMcc = 2;
  repeated AdFloatingItem dataSet = 3;
  string ext = 4;
}
/*********悬浮广告 end***********/

/*********充值 begin***********/
message RechargeItem{
  int32 tag = 1;
  string tagDetail = 2;
  string bizType = 3;
  string product = 4;
  int32 originalPrice = 5;
  int32 actualPrice = 6;
  int32 discountRate = 7;
  string goodsId = 8;
  string packageId = 9;
  string name = 10;
  string goodsDesc = 11;
  string currency = 12;
}

message ImsiRechargePart{
  int32 version = 1;
  string imsi = 2;
  repeated RechargeItem dataSet = 3;
  string ext = 4;
}

message RechargePart{
  ImsiRechargePart imsi1 = 1;
  ImsiRechargePart imsi2 = 2;
}
/*********充值 end*************/

/*********USSD begin***********/
message UssdItem{
  string clickAction = 1;
  string ussdLevel = 2;
  string iconUrl = 3;
  string name = 4;
}

message ImsiUssdPart{
  int32 version = 1;
  string imsi = 2;
  repeated UssdItem dataSet = 3;
  string ext = 4;
}

message UssdPart{
  ImsiUssdPart imsi1 = 1;
  ImsiUssdPart imsi2 = 2;
}
/*********USSD end*************/

/*********全部数据 begin***********/
message QueryResponse {
  int32 code = 1;
  string message = 2;
  int32 version = 3;
  int32 partType = 4;
  oneof dataPart {
    PinnedPart pinnedPart = 5;
    AdTxtPart adTxtPart = 6;
    AdPicPart adPicPart = 7;
    AdFloatingPart adFloatingPart = 8;
    RechargePart rechargePart = 9;
    UssdPart ussdPart = 10;
  }
  int64 updateTime = 11;
}
/*********全部数据 begin***********/

/*********查询分页数据或者更多数据 begin***********/
message PageEntity{
  int32 version = 1;
  int64 updateTime = 2;
  int32 partType = 3;
  int32 num = 4;
  oneof dataPart {
    PinnedPart pinnedPart = 5;
    AdTxtPart adTxtPart = 6;
    AdPicPart adPicPart = 7;
    AdFloatingPart adFloatingPart = 8;
    RechargePart rechargePart = 9;
    UssdPart ussdPart = 10;
  }
}

message QueryPageResponse{
  string code = 1;
  string message = 2;
  PageEntity pageEntity = 3;
}
/*********查询分页数据或者更多数据 begin***********/
